Improved main page responsive (mobile version)

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -23,7 +23,7 @@
     <script
       defer
       src="modal.js"></script>
-
+      
   </head>
   <body>
     <div
@@ -37,12 +37,7 @@
           height="auto" />
       </div>
       <div class="main-navbar">
-        <a
-          href="#"
-          class="active"
-          ><span>Accueil</span></a
-        >
-        <a href="#"><span>Détails de l'évènement</span></a>
+        <a href="#" class="active"><span>Détails de l'évènement</span></a>
         <a href="#"><span>À propos</span></a>
         <a href="#"><span>Contact</span></a>
         <a href="#"><span>Évènements passés</span></a>
