--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -78,7 +78,7 @@
               method="get"
               onsubmit="return validate();">
               <div class="formData">
-                <label>Prénom</label><br />
+                <label for="first">Prénom</label><br />
                 <input
                   class="text-control"
                   type="text"
@@ -87,7 +87,7 @@
                   minlength="2" /><br />
               </div>
               <div class="formData">
-                <label>Nom</label><br />
+                <label for="last">Nom</label><br />
                 <input
                   class="text-control"
                   type="text"
@@ -95,7 +95,7 @@
                   name="last" /><br />
               </div>
               <div class="formData">
-                <label>E-mail</label><br />
+                <label for="email">E-mail</label><br />
                 <input
                   class="text-control"
                   type="email"
@@ -103,7 +103,7 @@
                   name="email" /><br />
               </div>
               <div class="formData">
-                <label>Date de naissance</label><br />
+                <label for="birthdate">Date de naissance</label><br />
                 <input
                   class="text-control"
                   type="date"
@@ -111,7 +111,7 @@
                   name="birthdate" /><br />
               </div>
               <div class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br />
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br />
                 <input
                   type="number"
                   class="text-control"
