some modif on validation modal

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -228,6 +228,10 @@
                 class="button"
                 value="C'est parti" />
             </form>
+            <div class="validation">
+              <span class="validation-text">Merci pour votre inscription</span>
+              <button class="validation-button close">Fermer</button>
+            </div>
           </div>
         </div>
       </div>
