resolved a bug on close button display

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -70,7 +70,7 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span class="close close-modal"></span>
           <div class="modal-body">
             <form
               name="reserve"
@@ -230,7 +230,7 @@
             </form>
             <div class="validation">
               <span class="validation-text">Merci pour votre inscription</span>
-              <button class="validation-button close">Fermer</button>
+              <button class="validation-button close-modal">Fermer</button>
             </div>
           </div>
         </div>
