Added error messages in html

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -83,8 +83,8 @@
                   class="text-control"
                   type="text"
                   id="first"
-                  name="first"
-                  minlength="2" /><br />
+                  name="first" /><br />
+                <span class="error firstname-error">Le prénom doit ne peut contenir que des lettres et au minimum 2 caractéres</span>
               </div>
               <div class="formData">
                 <label for="last">Nom</label><br />
@@ -93,6 +93,7 @@
                   type="text"
                   id="last"
                   name="last" /><br />
+                <span class="error lastname-error">Le nom doit ne peut contenir que des lettres et au minimum 2 caractéres</span>
               </div>
               <div class="formData">
                 <label for="email">E-mail</label><br />
@@ -101,6 +102,7 @@
                   type="email"
                   id="email"
                   name="email" /><br />
+                <span class="error email-error">L'adresse email n'est pas valide</span>
               </div>
               <div class="formData">
                 <label for="birthdate">Date de naissance</label><br />
@@ -109,6 +111,7 @@
                   type="date"
                   id="birthdate"
                   name="birthdate" /><br />
+                <span class="error birthdate-error">La date de naissance n'est pas valide</span>
               </div>
               <div class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br />
@@ -119,6 +122,7 @@
                   name="quantity"
                   min="0"
                   max="99" />
+                <span class="error quantity-error">Veuillez remplir ce champ</span>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div class="formData">
@@ -194,6 +198,7 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
+                <span class="error tournament-error">Veuillez choisir un tournoi</span>
               </div>
 
               <div class="formData">
@@ -209,6 +214,7 @@
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
+                <span class="error CG-error">Veuillez accepter les conditions générales</span>
                 <br />
                 <input
                   class="checkbox-input"
@@ -227,6 +233,7 @@
                 type="submit"
                 class="button"
                 value="C'est parti" />
+              <span class="error submit-error">Les informations sont incorrectes, veuillez remplir tout les champs</span>
             </form>
             <div class="validation">
               <span class="validation-text">Merci pour votre inscription</span>
