Added display switch functions for error messages

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -83,8 +83,8 @@
                   class="text-control"
                   type="text"
                   id="first"
-                  name="first" /><br />
-                <span class="error firstname-error">Le prénom doit ne peut contenir que des lettres et au minimum 2 caractéres</span>
+                  name="first"/><br />
+                <span class="error firstname-error">Le prénom doit ne peut contenir que des lettres et au minimum 2 caractères</span>
               </div>
               <div class="formData">
                 <label for="last">Nom</label><br />
@@ -93,7 +93,7 @@
                   type="text"
                   id="last"
                   name="last" /><br />
-                <span class="error lastname-error">Le nom doit ne peut contenir que des lettres et au minimum 2 caractéres</span>
+                <span class="error lastname-error">Le nom doit ne peut contenir que des lettres et au minimum 2 caractères</span>
               </div>
               <div class="formData">
                 <label for="email">E-mail</label><br />
