Modified name regex

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -83,7 +83,8 @@
                   class="text-control"
                   type="text"
                   id="first"
-                  name="first"/><br />
+                  name="first"
+                  min="2"/><br />
                 <span class="error firstname-error">Le prénom doit ne peut contenir que des lettres et au minimum 2 caractères</span>
               </div>
               <div class="formData">
