Some little modifs according to instruction

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -86,7 +86,7 @@
                   id="first"
                   name="first"
                   min="2"/><br />
-                <span class="error">Le prénom doit ne peut contenir que des lettres et au minimum 2 caractères</span>
+                <span class="error">Veuillez entrer 2 caractères ou plus pour le champ du prénom.</span>
               </div>
               <div class="formData">
                 <label for="last">Nom</label><br />
@@ -95,7 +95,7 @@
                   type="text"
                   id="last"
                   name="last" /><br />
-                <span class="error">Le nom doit ne peut contenir que des lettres et au minimum 2 caractères</span>
+                <span class="error">Veuillez entrer 2 caractères ou plus pour le champ du nom.</span>
               </div>
               <div class="formData">
                 <label for="email">E-mail</label><br />
@@ -113,7 +113,7 @@
                   type="date"
                   id="birthdate"
                   name="birthdate" /><br />
-                <span class="error">La date de naissance n'est pas valide</span>
+                <span class="error">Vous devez entrer votre date de naissance.</span>
               </div>
               <div class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br />
@@ -122,7 +122,7 @@
                   class="text-control"
                   id="quantity"
                   name="quantity" />
-                <span class="error">Veuillez saisir un nombre entre 1 et 99</span>
+                <span class="error">Veuillez remplir ce champ.</span>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div class="formData">
@@ -198,7 +198,7 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
-                <span class="error">Veuillez choisir un tournoi</span>
+                <span class="error">Vous devez choisir une option.</span>
               </div>
 
               <div class="formData">
@@ -214,7 +214,7 @@
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
-                <span class="error">Veuillez accepter les conditions générales</span>
+                <span class="error">Vous devez vérifier que vous acceptez les termes et conditions.</span>
                 <br />
                 <input
                   class="checkbox-input"
