--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -76,7 +76,7 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              onsubmit="validate();return false;"
               novalidate>
               <div class="formData">
                 <label for="first">Prénom</label><br />
